--- a/AlisverisSitesi/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/AlisverisSitesi/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -37,7 +37,7 @@
         <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                    <a class="navbar-brand  @menuTextColor" asp-area="" asp-controller="Home" asp-action="Index">AlisverisSitesi</a>
+                    <a class="navbar-brand  @menuTextColor" asp-area="Admin" asp-controller="Home" asp-action="Index">AlisverisSitesi</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link  @menuTextColor" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["AnaSayfa"]</a>
+                                <a class="nav-link  @menuTextColor" asp-area="Admin" asp-controller="Home" asp-action="Index">@Localizer["AnaSayfa"]</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link  @menuTextColor" asp-area="Admin" asp-controller="ContactUs" asp-action="Index">@Localizer["Gelen Mesajlar"]</a>
@@ -65,16 +65,7 @@
                             </li>
 
 
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            @{
-                                string culture = "", uiculture = "";
-                                if (Context.Request.QueryString.HasValue)
-                                {
-                                    string url = Context.Request.QueryString.Value;
-                                    culture = Context.Request.Query["culture"];
-                                    uiculture = Context.Request.Query["ui-culture"];
-                                }
-                            }
+                       
 
                         </ul>
                     <partial name="_LoginPartial" />
@@ -86,13 +77,7 @@
     <div class="container">
         <main role="main" class="pb-3">
             <div class="row">
-                <div class="col-3">
-                    <vc:categories-view-copnent />
-
-                    <div class="bg-success mt-3 p-3 text-white">
-                        <vc:small-cart />
-                    </div>
-                </div>
+                
                 <div class="col">
                     <partial name="_NotificationPartial" />
                     @RenderBody()
@@ -103,7 +88,7 @@
 
     <footer class="border-top footer text-muted" style="background: linear-gradient(to right,#283408,#197696);">
         <div class="container  @menuTextColor">
-            &copy; 2022 - AlisverisSitesi - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="@menuTextColor">Privacy</a>
+            &copy; 2022 - AlisverisSitesi - <a asp-area="Admin" asp-controller="Home" asp-action="Privacy" class="@menuTextColor">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
