--- a/AlisverisSitesi/Areas/Admin/Views/Uruns/Edit.cshtml
+++ b/AlisverisSitesi/Areas/Admin/Views/Uruns/Edit.cshtml
@@ -20,47 +20,104 @@
 
             <input type="hidden" asp-for="Image" />
 
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            <div class="row text-white text-center" style="    position: fixed;
+background: linear-gradient(to left,#28347d,#19767D);
+    min-height:50%;
+    left: 0; right: 0;    top: 8%;
 
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
 
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
 
-            <div class="form-group">
-                <label>Categories</label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Categories">
-                    <option value="0">Choose a category</option>
-                </select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
+    ">
+                <div class="col" style="  margin:15px;">
+                    <div class="row" style="  padding:10px;">
 
-            <div class="form-group">
-                <label>Current Image</label>
-                <img src="/media/Urunlar/@Model.Image" width="200" alt="" />
-            </div>
+                        <div class="col-2">
+                            <tr>
+                                <td><label asp-for="Name" class="control-label"></label></td>
+                                <td>:</td>
+                            </tr>
 
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="ImageUpload" class="form-control" />
-                <img id="imgpreview" class="pt-2" />
-                <span asp-validation-for="ImageUpload" class="text-danger"></span>
-            </div>
+                        </div>
+                        <div class="col-10">
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
 
-            <div class="form-group">
-                <button class="btn btn-primary">@Localizer["Oluştur"]</button>
-            </div>
+
+
+                    <div class="row" style="  padding:10px;">
+
+                        <div class="col-2">
+
+                            <tr>
+                                <td><label asp-for="Price" class="control-label"></label></td>
+                                <td>:</td>
+                            </tr>
+                        </div>
+                        <div class="col-10">
+                            <input asp-for="Price" class="form-control" />
+                            <span asp-validation-for="Price" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row" style="  padding:10px;">
+
+                        <div class="col-2">
+
+                            <tr>
+                                <td>
+                                    <label>@Localizer["kategori"]</label>
+                                </td>
+
+                                <td>:</td>
+                            </tr>
+                        </div>
+                        <div class="col-10">
+
+
+                            <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Categories">
+                                <option value="0">@Localizer["Bir kategori seçin"]</option>
+                            </select>
+                            <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row" style="  padding:10px;">
+
+                        <div class="col-2">
+
+                            <tr>
+                                <td><label asp-for="Image" class="control-label"></label></td>
+                                <td>:</td>
+                            </tr>
+
+                        </div>
+                        <div class="col-10">
+                            <input asp-for="ImageUpload" class="form-control" />
+                            <img id="imgpreview" class="pt-2" />
+                            <span asp-validation-for="ImageUpload" class="text-danger"></span>
+                        </div>
+                    </div>
+
+
+                    <div class="row" style="  padding:10px;">
+
+                        <div class="col-2">
+                            <button class="btn btn-primary">@Localizer["Oluştur"]</button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col" style=" padding:10px; margin:15px;">
+
+                    <div class="form-group">
+                        <textarea asp-for="Description" class="form-control"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+
+
+                </div>
         </form>
     </div>
 </div>
