--- a/AlisverisSitesi/Views/ContactUs/Create.cshtml
+++ b/AlisverisSitesi/Views/ContactUs/Create.cshtml
@@ -22,22 +22,25 @@
             <div class="form-group">
 
                     <input asp-for="Name" class="form-control" placeholder="@Localizer["Ad Soyad"]" />
-               
+                    <span asp-validation-for="Name" class="text-danger"></span>
             </div>
            
             <div class="form-group">
 
                     <input asp-for="Email" class="form-control" placeholder="@Localizer["Mail"]" />
-               
+                    <span asp-validation-for="Email" class="text-danger"></span>
+
             </div>
             <div class="form-group">
 
                     <input asp-for="Subject" class="form-control" placeholder="@Localizer["Konu"]" />
-              
+                    <span asp-validation-for="Subject" class="text-danger"></span>
+
             </div>
                 <div class="form-group">
 
                     <input asp-for="Message" class="form-control" placeholder="@Localizer["mesaj"]" />
+                    <span asp-validation-for="Message" class="text-danger"></span>
 
                 </div>
                 <input type="submit" class="btn btn-danger" value="@Localizer["mesaj gönder"]"></input>
