--- a/AlisverisSitesi/Views/Shared/Components/CategoriesViewCopnent/Default.cshtml
+++ b/AlisverisSitesi/Views/Shared/Components/CategoriesViewCopnent/Default.cshtml
@@ -9,14 +9,14 @@
 @model IEnumerable<Category>
 
 <ul class="list-group">
-    <li class="list-group-item">
-        <a class="nav-link text-dark" asp-controller="Uruns" asp-action="Index" asp-route-categorySlug="">@Localizer["Tüm ürünler"]</a>
+    <li class="list-group-item" style="background: linear-gradient(to left,#28347d,#19767D);">
+        <a class="nav-link text-white" asp-controller="Uruns" asp-action="Index" asp-route-categorySlug="">@Localizer["Tüm ürünler"]</a>
     </li>
 
     @foreach (var item in Model)
     {
-        <li class="list-group-item">
-            <a class="nav-link text-dark" asp-controller="Uruns" asp-action="Index" asp-route-categorySlug=@item.Slug>@item.Name</a>
+        <li class="list-group-item" style="background:linear-gradient(to left,#28347d,#04a7b4);">
+            <a class="nav-link text-white" asp-controller="Uruns" asp-action="Index" asp-route-categorySlug=@item.Slug>@item.Name</a>
         </li>
     }
 </ul>
