--- a/AlisverisSitesi/Views/Cart/Index.cshtml
+++ b/AlisverisSitesi/Views/Cart/Index.cshtml
@@ -57,14 +57,14 @@
 }
 else if(TempData["sepeteOnaylama"]!=null)
 {
-        <div class="alert alert-success text-center notification">
+        <div class="alert alert-success text-black text-center notification">
         @TempData["sepeteOnaylama"]
     </div>
 }
 else
 {
 
-    <div class="alert alert-success text-center notification">
+    <div class="alert alert-success text-black text-center notification">
         <div class="text-center">@Localizer["Sepetiniz boş"]</div>
     </div>
 }
