--- a/AlisverisSitesi/Views/ContactUs/Msj.cshtml
+++ b/AlisverisSitesi/Views/ContactUs/Msj.cshtml
@@ -5,5 +5,6 @@
 }
 <div class="container IndexDiv">
     <br />
-    <h4 class="text-center text-dark">Mesajiniz Başarı Bir Şekilde Gerçekleşti</h4>
+    <h4 class="alert alert-success text-black text-center">Mesajiniz Başarı Bir Şekilde Gerçekleşti</h4>
 </div>
+
